added 2 roles User And Admin role in User entity